# DownloadManager

./: CMakeLists.txt  README.md  console.c  console.h  file_transfer.c  file_transfer.h  main.c  sockets.c  sockets.h  tcp_client.c  tcp_server.c
compression/: compression.c  compression.h  utilities.c  utilities.h
huffman_structures/: huffman_node.c  huffman_node.h  huffman_tree.c  huffman_tree.h  priority_queue.c  priority_queue.h
